--- a/optionsApi/options-watch.html
+++ b/optionsApi/options-watch.html
@@ -7,7 +7,9 @@
 
   <h3>watch 監聽單一變數</h3>
   <label for="name">名字須超過十個字</label>
+  <!-- 監聽變數 tempName，對應 data 內的 tempName -->
   <input type="text" id="name" v-model="tempName">
+  <!-- 當監聽之 tempName 有變化時，就將結果寫入 {{ result }} 以及 {{ name }} -->
   <P>result: {{ result }}</P>
   <p>name: {{ name }}</p>
 
@@ -24,6 +26,7 @@
     <li>會產生一個值</li>
   </ul>
 
+  <!-- 同時監聽 3 個變數 -->
   <label for="productName">商品名稱</label><input type="text" v-model="productName"><br>
   <label for="productPrice">商品價格</label><input type="number" v-model.number="productPrice"><br>
   <label><input type="checkbox"  v-model="productVegan"> 素食</label>
@@ -85,9 +88,51 @@ const App = {
   },
   computed: {
     result2() {
-      
+      return `媽媽買了 ${this.productName}，總共花費 ${this.productPrice} 元，另外這 ${this.productVegan? '是' : '不是'} 素食的`
     }
   },
+  // 當監聽一個值時，會產生一個 watch 物件
+  watch: {
+    // 新增監聽物件
+    product: {
+      // 控制器
+      handler(n, o) {
+        console.log(n, o);
+        // 由於是監聽 product 「物件」，需使用 product.
+        this.result4 = `媽媽買了 
+        ${this.product.name}，總共花費 
+        ${this.product.price} 元，另外這 
+        ${this.product.vegan? '是' : '不是'} 素食的`
+      },
+      // 定義是否為「深層監聽」
+      deep: true,
+    },
+    // 同時監聽 3 個變數需寫 3 次，因一次只能監聽一個變數
+    productName() {
+      this.result3 = `媽媽買了 ${this.productName}，總共花費 ${this.productPrice} 元，另外這 ${this.productVegan? '是' : '不是'} 素食的`
+    },
+    productPrice() {
+      this.result3 = `媽媽買了 ${this.productName}，總共花費 ${this.productPrice} 元，另外這 ${this.productVegan? '是' : '不是'} 素食的`
+    },
+    productVegan() {
+      this.result3 = `媽媽買了 ${this.productName}，總共花費 ${this.productPrice} 元，另外這 ${this.productVegan? '是' : '不是'} 素食的`
+    },
+    // 監聽值即為函式名稱
+    // 帶入 2 個參數 (新值, 舊值)
+    tempName(n, o) {
+      console.log(n, o);
+      // 當新值達到一定長度(>=10)時，執行第一個片段
+      // 當新值小於一個片段時，會執行另一個片段
+      if (n.length >= 10) {
+        // 寫入至 result 內
+        this.result = `文字長度為 ${n.length} 個字，將儲存至變數中`
+        // 寫入至 name，等於新值 n
+        this.name = n
+      }else {
+        this.result = `輸入的文字僅有 ${n.length} 個字，上一次有 ${o.length} 個字`
+      }
+    }
+  }
   // 保留文字：
   // `文字長度為 ${n.length} 個字，將儲存至變數中`
   // `輸入的文字僅有 ${n.length} 個字，上一次有 ${o.length} 個字`
