--- a/advApi/adv-teleport.html
+++ b/advApi/adv-teleport.html
@@ -1,64 +1,85 @@
-<!DOCTYPE html><html><head><title>Teleport</title><meta name="viewport" content="width=device-width, initial-scale=1"><link href="images/favicon.ico" rel="shortcut icon"><meta charset="UTF-8"><script src="/javascripts/vendor.js"></script><script src="https://cdnjs.cloudflare.com/ajax/libs/vue/3.2.37/vue.global.js"></script></head><body class="bg-lighter">
-<div class="container main my-5"><div class="row"><main class="col post">
-<!-- 章節標題 --><div class="mb-4"><h1 class="mt-0 text-muted">Teleport</h1><small>檔名：<code>adv-teleport.html</code></small></div>
-<!-- 🔥🔥練習開始🔥🔥 -->
+<!DOCTYPE html>
+<html>
+  <head>
+    <title>Teleport</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1"><link href="images/favicon.ico" rel="shortcut icon">
+    <meta charset="UTF-8">
+    <script src="/javascripts/vendor.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/vue/3.2.37/vue.global.js"></script>
+</head>
+<body class="bg-lighter">
+<div class="container main my-5">
+  <div class="row">
+    <main class="col post">
+      <!-- 章節標題 -->
+      <div class="mb-4">
+        <h1 class="mt-0 text-muted">Teleport</h1>
+        <small>檔名：<code>adv-teleport.html</code>
+        </small>
+      </div>
+      <!-- 🔥🔥練習開始🔥🔥 -->
 
-<div id="app">
-  <div id="target"></div>
+      <div id="app">
+        <div id="target"></div>
 
-  <h3>Teleport 自訂義元件位置</h3>
-  結構：<code>&lt;teleport to="{ target }"&gt;</code>
-  <card></card>
+        <h3>Teleport 自訂義元件位置</h3>
+        結構：<code>&lt;teleport to="{ target }"&gt;</code>
+        <card></card>
 
-  <h3>使用限制（錯誤情境）</h3>
-  <card2></card2>
+        <h3>使用限制（錯誤情境）</h3>
+        <card2></card2>
 
-  <h3>實用技巧（取代標題、多個）</h3>
-<!--  <new-title></new-title>-->
-</div>
-
-<script>
-const app = Vue.createApp({
-})
-
-  app.component('card', {
-    data() {
-      return {
-        title: '文件標題',
-        content: '文件內文',
-        toggle: false
-      }
-    },
-    template: `
-      <div class="card" style="width: 18rem;">
-        <div class="card-body">
-          <h5 class="card-title">{{ title }}</h5>
-          <p class="card-text">{{ content }}</p>
-          <button type="button" @click="toggle = !toggle">切換元素顯示</button>
-        </div>
+        <h3>實用技巧（取代標題、多個）</h3>
+        <new-title></new-title>
       </div>
 
-      <div v-if="toggle" class="alert alert-danger">被招喚的元素</div>
-    `,
-    props: ['item']
-  });
+      <script>
+      const app = Vue.createApp({
+      })
 
-  app.component('card2', {
-    template: `
-      <div class="alert alert-danger">被招喚的元素</div>
-    `
-  })
+        app.component('card', {
+          data() {
+            return {
+              title: '文件標題',
+              content: '文件內文',
+              toggle: false
+            }
+          },
+          template: `
+            <div class="card" style="width: 18rem;">
+              <div class="card-body">
+                <h5 class="card-title">{{ title }}</h5>
+                <p class="card-text">{{ content }}</p>
+                <button type="button" @click="toggle = !toggle">切換元素顯示</button>
+              </div>
+            </div>
+            <teleport to="#target">
+              <div v-if="toggle" class="alert alert-danger">被招喚的元素</div>
+            </teleport>
+          `,
+          props: ['item']
+        });
 
-  app.component('new-title', {
-    template: `<teleport to="title"> - 新增的標題片段</teleport>
-    <teleport to="h1"> - 新增的文字片段</teleport>`
-  })
+        app.component('card2', {
+          template: `
+          <teleport to=".col-md-3">
+            <div class="alert alert-danger">被招喚的元素</div>
+          </teleport>
+          `
+        })
 
-  app.mount('#app');
-</script>
+        app.component('new-title', {
+          template: `
+          <teleport to="title"> - 新增的標題片段</teleport>
+          <teleport to="h1"> - 新增的文字片段</teleport>
+          `
+        })
 
-<!-- 🙇🙇練習結束🙇🙇 -->
-</main>
+        app.mount('#app');
+      </script>
+
+    <!-- 🙇🙇練習結束🙇🙇 -->
+    </main>
   
     <aside
       class="col-md-3"><div class="sticky-top" style="top: 76px">
@@ -133,7 +154,7 @@ const app = Vue.createApp({
   </div>
 </div>
 
-</aside>
+    </aside>
     
   </div>
 </div>
