--- a/advApi/adv-refs.html
+++ b/advApi/adv-refs.html
@@ -5,11 +5,11 @@
 
 <div id="app">
   <h3>使用 ref 定義元素</h3>
-  <input type="text">
+  <input type="text" ref="inputDom">
 
   <h3>使用 ref 取得元件內的資訊</h3>
   <button type="button" @click="getComponentInfo">取得元件資訊</button>
-  <card></card>
+  <card ref="card"></card>
 
   <h3>進階，使用 ref 搭配 Bootstrap</h3>
   Bootstrap Modal: <a href="https://getbootstrap.com/docs/5.0/components/modal/">https://getbootstrap.com/docs/5.0/components/modal/</a>
@@ -39,19 +39,29 @@
 const app = Vue.createApp({
   data() {
     return {
+      // 定義變數，方便於不同區域呼叫 Modal
       bsModal: ''
     }
   },
   methods: {
     getComponentInfo() {
-
+      console.log(this.$refs.card);
+      // 對元件資訊進行操作
+      this.$refs.card.title = '被更新的元件標題'
     },
     openModal() {
-
+      this.bsModal.show();
     }
   },
+  // mounted 才是畫面生成狀態
   mounted() {
+    // refs 會取得多數個節點內容
+    // this.$refs.inputDom 直接指向 input
+    console.log(this.$refs, this.$refs.inputDom);
+    // 可直接進行 JS 操作
+    this.$refs.inputDom.focus();
 
+    this.bsModal = new bootstrap.Modal(this.$refs.modal)
   }
 })
 
