--- a/advApi/adv-component-v-model.html
+++ b/advApi/adv-component-v-model.html
@@ -7,12 +7,15 @@
   <h2>將元件內的值傳回 v-model（update:modelValue）</h2>
   <p>參考說明：<a href="https://vue3js.cn/docs/zh/guide/component-custom-events.html#v-model-%E5%8F%82%E6%95%B0">https://vue3js.cn/docs/zh/guide/component-custom-events.html#v-model-%E5%8F%82%E6%95%B0</a></p>
   {{ name }}
-  <custom-input></custom-input>
+  <custom-input v-model:text="name"></custom-input>
 
   <hr>
   <h2>多個 v-model</h2>
   {{ text }} {{ text2 }}
-  <custom-input2 ></custom-input2>
+  <custom-input2 
+  v-model:t1="text"
+  v-model:t2="text2">
+  </custom-input2>
 </div>
 
 <script>
@@ -30,7 +33,12 @@ const app = Vue.createApp({
 // $emit('update:text', $event.target.value) 搭配 props，可以將更新後的值寫回 v-model 內
 app.component('custom-input', {
   props: ['text'],
+  // 透過 v-bind 將值寫到 value 上
+  // 使用 v-on 進行雙向綁定
+  // $event.target.value 為目前 input 目前所輸入的值
   template: `<input type="text"
+  :value="text"
+  @input="$emit('update:text', $event.target.value)"
   class="form-control">`
 });
 
@@ -38,9 +46,13 @@ app.component('custom-input2', {
   props: ['t1', 't2'],
   template: `
 <input type="text"
+  :value="t1"
+  @input="$emit('update:t1', $event.target.value)"
   class="form-control">
 
 <input type="text"
+  :value="t2"
+  @input="$emit('update:t2', $event.target.value)"
   class="form-control">
 `
 })
