--- a/advApi/adv-directive.html
+++ b/advApi/adv-directive.html
@@ -18,7 +18,7 @@
     <li>主要透過生命週期來觸發變動，可參考：<a
         href="https://vue3js.cn/docs/zh/guide/custom-directive.html#%E5%8A%A8%E6%80%81%E6%8C%87%E4%BB%A4%E5%8F%82%E6%95%B0">https://vue3js.cn/docs/zh/guide/custom-directive.html#%E5%8A%A8%E6%80%81%E6%8C%87%E4%BB%A4%E5%8F%82%E6%95%B0</a></li>
   </ul>
-  <input type="email" v-model="text">
+  <input type="email" v-model="text" v-validator="'form-control'">
 
 </div>
 <script type="module">
@@ -34,33 +34,41 @@ const app = Vue.createApp({
 app.directive('validator', {
   // directive 生命週期
   mounted(el, binding) {
-    // el.focus();
+    // el 為元件本身
+    // 觸發元件本身
+    el.focus();
 
     // 將外部的值改為
-    // el.className = binding.value
+    console.log(binding);
+    // el 為 html 的元素本身，可操作其 className
+    el.className = binding.value
   },
+  // 加入另一個生命週期
+  // 當元素觸發更新時，觸發此 updated 事件
   updated: function(el, binding, vnode) {
     // el 元素本體
     // binding 綁定的資源狀態
     // vnode 虛擬 DOM 節點
     console.log('update', el, binding, vnode);
-    // const className = binding.value;
+    const className = binding.value;
 
     // 尋找當前的 model 名稱（取得 key 值，並帶入第一個）
-    // const currentModel = Object.keys(binding.instance)[0];
+    const currentModel = Object.keys(binding.instance)[0];
+    // 取得當前 Model 名稱
+    // console.log(currentModel);
 
     // 從當前 Model 取值
-    // const value = binding.instance[currentModel];
-    // console.log(currentModel, value)
+    const value = binding.instance[currentModel];
+    console.log(currentModel, value)
 
-    // Email validate
-    // const re = /^(([^<>()\[\]\.,;:\s@\"]+(\.[^<>()\[\]\.,;:\s@\"]+)*)|(\".+\"))@(([^<>()[\]\.,;:\s@\"]+\.)+[^<>()[\]\.,;:\s@\"]{2,})$/i;
+    // Email validate 驗證
+    const re = /^(([^<>()\[\]\.,;:\s@\"]+(\.[^<>()\[\]\.,;:\s@\"]+)*)|(\".+\"))@(([^<>()[\]\.,;:\s@\"]+\.)+[^<>()[\]\.,;:\s@\"]{2,})$/i;
 
-    // if (!re.test(value)) {
-    //   el.className = `${className} is-invalid`
-    // } else {
-    //   el.className = `${className} is-valid`
-    // }
+    if (!re.test(value)) {
+      el.className = `${className} is-invalid`
+    } else {
+      el.className = `${className} is-valid`
+    }
   },
 })
 
