--- a/advApi/adv-vee-validation.html
+++ b/advApi/adv-vee-validation.html
@@ -8,12 +8,14 @@
   <p>參考文件：<a href="https://hackmd.io/FFv0a5cBToOATP7uI5COMQ">https://hackmd.io/FFv0a5cBToOATP7uI5COMQ</a></p>
 
   <h3>範例：載入 VeeValidate 驗證套件</h3>
-  <form @submit="onSubmit" >
+  <v-form @submit="onSubmit" v-slot="{ errors }">
+    {{ errors }}
     <div class="mb-3">
       <label for="email" class="form-label">Email</label>
-      <input id="email" name="email" type="email" class="form-control"
-               placeholder="請輸入 Email">
-      <span class="invalid-feedback"></span>
+      <v-field id="email" name="email" type="email" class="form-control" placeholder="請輸入 Email" rules="email|required" :class="{ 'is-invalid': errors['email'] }" v-model="user.email">
+      </v-field>
+      <!-- error-message 需對應到 v-field 的 name 欄位 -->
+      <error-message name="email" class="invalid-feedback"></error-message>
     </div>
 
     <div class="mb-3">
@@ -25,9 +27,9 @@
 
     <div class="mb-3">
       <label for="phone" class="form-label">電話</label>
-      <input id="phone" name="電話" type="text" class="form-control"
-               placeholder="請輸入電話">
-      <span class="invalid-feedback"></span>
+      <v-field id="phone" name="電話" type="text" class="form-control" placeholder="請輸入電話" :rules="isPhone" :class="{ 'is-invalid': errors['電話'] }">
+      </v-field>
+      <error-message name="電話" class="invalid-feedback"></error-message>
     </div>
 
     <div class="mb-3">
@@ -48,13 +50,29 @@
     </div>
 
     <button class="btn btn-primary" type="submit">Submit</button>
-  </form>
+  </v-form>
 
 </div>
+<!-- vee validate -->
 <script src="https://cdnjs.cloudflare.com/ajax/libs/vee-validate/4.1.17/vee-validate.min.js"></script>
+<!-- 相關規則 -->
 <script src="https://cdn.jsdelivr.net/npm/@vee-validate/i18n@4.1.17/dist/vee-validate-i18n.min.js"></script>
+<!-- 多國語系 -->
 <script src="https://cdn.jsdelivr.net/npm/@vee-validate/rules@4.1.17/dist/vee-validate-rules.min.js"></script>
 <script type="module">
+// 加入規則
+VeeValidate.defineRule('email', VeeValidateRules['email']);
+VeeValidate.defineRule('required', VeeValidateRules['required']);
+
+// 讀取外部的資源 VeeValidateI18n 套件
+VeeValidateI18n.loadLocaleFromURL('./zh_TW.json');
+
+// Activate the locale
+VeeValidate.configure({
+  generateMessage: VeeValidateI18n.localize('zh_TW'),
+  validateOnInput: true, // 調整為：輸入文字時，就立即進行驗證
+});
+
 const app = Vue.createApp({
   data() {
     return {
@@ -80,6 +98,10 @@ const app = Vue.createApp({
   }
 });
 
+// 註冊全域元件
+app.component('VForm', VeeValidate.Form);
+app.component('VField', VeeValidate.Field);
+app.component('ErrorMessage', VeeValidate.ErrorMessage);
 
 app.mount('#app');
 </script>
