--- a/router/vue-router.html
+++ b/router/vue-router.html
@@ -6,8 +6,22 @@
 <div id="app">
   <h2>路由示範</h2>
   {{ text }}
+  <!-- 設置連結對應路徑 -->
+  <!-- to="" 屬性對應路由表之路徑 path -->
+  <router-link to="/a">a</router-link> | 
+  <router-link to="/b">b</router-link>
+  <!-- 插入路由元件 -->
+  <router-view></router-view>
 </div>
 <script>
+// 建立元件
+const componentA = {
+  template: `<div>A</div>`
+}
+const componentB = {
+  template: `<div>B</div>`
+}
+
 const app = Vue.createApp({
   data() {
     return {
@@ -18,12 +32,24 @@ const app = Vue.createApp({
 });
 
 // 路由設定
-// const router = VueRouter.createRouter({
-//   // 網址路徑模式：使用網址 hash 的形式
-//   history: VueRouter.createWebHashHistory(),
-//   // 匯入路由表
-//   routes: []
-// });
+const router = VueRouter.createRouter({
+  // 網址路徑模式：使用網址 hash(#/) 的形式
+  history: VueRouter.createWebHashHistory(),
+  // 匯入路由表
+  routes: [{
+    // 路徑、對應的元件
+    path: '/a',
+    component: componentA
+  },
+  {
+    // 路徑、對應的元件
+    path: '/b',
+    component: componentB
+  }]
+});
+
+// 將 Vue Router 加入到 Vue
+app.use(router);
 
 app.mount('#app');
 </script>
