--- a/composition/composition_provide.html
+++ b/composition/composition_provide.html
@@ -9,18 +9,20 @@
 </div>
 <script type="module">
 // import { createApp } from '...';
-const { createApp, ref } = Vue;
+const { createApp, ref, provide, inject } = Vue;
 
 const card = {
   template: `<div class="card" style="width: 18rem;">
     <div class="card-body">
-      <h5 class="card-title"></h5>
-      <input type="text">
+      <h5 class="card-title">{{ person.name }}</h5>
+      <input type="text" v-model="person.name">
     </div>
   </div>`,
   setup(props) {
+    const person = inject('person')
 
     return {
+      person
     }
   }
 }
@@ -30,9 +32,12 @@ const app = createApp({
     card,
   },
   setup(props) {
-    const person = {
+    // 使用 ref 雙向綁定
+    const person = ref({
       name: '卡斯伯'
-    };
+    });
+
+    provide('person', person)
 
 
     return {
